{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 58,
  "lineage": "113f4ea8-385f-a402-72b6-72d90a333d6b",
  "resources": [
    {
      "module": "module.ec2-resources",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dy_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:925676828058:instance/i-058ee2391b4fb5864",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-058ee2391b4fb5864",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dy-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045c3213699da480a",
            "private_dns": "ip-192-168-1-141.ec2.internal",
            "private_ip": "192.168.1.141",
            "public_dns": "ec2-54-208-138-64.compute-1.amazonaws.com",
            "public_ip": "54.208.138.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bcee40d2de3e26a8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-078ab120dba439e95"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4c5409810c7cf64",
            "tags": {
              "Name": "dy-instance"
            },
            "tags_all": {
              "Name": "dy-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-078ab120dba439e95"
            ]
          },
          "dependencies": [
            "module.ec2-resources.aws_key_pair.dy_key",
            "module.ec2-resources.aws_security_group.dy_sg",
            "module.network.aws_subnet.dy_public_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:security-group/sg-078ab120dba439e95",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078ab120dba439e95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dy_sg",
            "name_prefix": "",
            "owner_id": "925676828058",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dy-security-group"
            },
            "tags_all": {
              "Name": "dy-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dy_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0247d10cb78ed0719",
            "association_id": "eipassoc-00180cfb525a3fd22",
            "domain": "vpc",
            "id": "eipalloc-0247d10cb78ed0719",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01e493f3458a011f8",
            "private_dns": "ip-192-168-3-208.ec2.internal",
            "private_ip": "192.168.3.208",
            "public_dns": "ec2-44-209-201-255.compute-1.amazonaws.com",
            "public_ip": "44.209.201.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:internet-gateway/igw-0a8d2c04c71d7ed2d",
            "id": "igw-0a8d2c04c71d7ed2d",
            "owner_id": "925676828058",
            "tags": {
              "Name": "dy-igw"
            },
            "tags_all": {
              "Name": "dy-igw"
            },
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dy_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0247d10cb78ed0719",
            "connectivity_type": "public",
            "id": "nat-0492d67cd36c1ed6c",
            "network_interface_id": "eni-01e493f3458a011f8",
            "private_ip": "192.168.3.208",
            "public_ip": "44.209.201.255",
            "subnet_id": "subnet-04906c469cc47f5e0",
            "tags": {
              "Name": "dy-nat-gw"
            },
            "tags_all": {
              "Name": "dy-nat-gw"
            }
          },
          "dependencies": [
            "module.network.aws_eip.dy_nat_eip",
            "module.network.aws_subnet.dy_private_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0032fb82a02e1a20b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0492d67cd36c1ed6c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0032fb82a02e1a20b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.dy_nat_eip",
            "module.network.aws_nat_gateway.dy_nat_gw",
            "module.network.aws_route_table.dy_private_rt",
            "module.network.aws_subnet.dy_private_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a8d2c04c71d7ed2d",
            "id": "r-rtb-0f1f0815b3e9984471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1f0815b3e998447",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.dy_igw",
            "module.network.aws_route_table.dy_public_rt",
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dy_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:route-table/rtb-0032fb82a02e1a20b",
            "id": "rtb-0032fb82a02e1a20b",
            "owner_id": "925676828058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0492d67cd36c1ed6c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dy-private-rt"
            },
            "tags_all": {
              "Name": "dy-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dy_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:route-table/rtb-0f1f0815b3e998447",
            "id": "rtb-0f1f0815b3e998447",
            "owner_id": "925676828058",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8d2c04c71d7ed2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dy-public-rt"
            },
            "tags_all": {
              "Name": "dy-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dda5248c29449d60",
            "route_table_id": "rtb-0032fb82a02e1a20b",
            "subnet_id": "subnet-04906c469cc47f5e0"
          },
          "dependencies": [
            "module.network.aws_route_table.dy_private_rt",
            "module.network.aws_subnet.dy_private_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f82d70b2423e2a",
            "route_table_id": "rtb-0032fb82a02e1a20b",
            "subnet_id": "subnet-0b9510f94b39f61de"
          },
          "dependencies": [
            "module.network.aws_route_table.dy_private_rt",
            "module.network.aws_subnet.dy_private_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511affa8723bba26",
            "route_table_id": "rtb-0f1f0815b3e998447",
            "subnet_id": "subnet-0b4c5409810c7cf64"
          },
          "dependencies": [
            "module.network.aws_route_table.dy_public_rt",
            "module.network.aws_subnet.dy_public_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc66c3fcc463b38b",
            "route_table_id": "rtb-0f1f0815b3e998447",
            "subnet_id": "subnet-04e12594fe8e6e959"
          },
          "dependencies": [
            "module.network.aws_route_table.dy_public_rt",
            "module.network.aws_subnet.dy_public_subnet",
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dy_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:subnet/subnet-04906c469cc47f5e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04906c469cc47f5e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925676828058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dy-private-subnet-1"
            },
            "tags_all": {
              "Name": "dy-private-subnet-1"
            },
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:subnet/subnet-0b9510f94b39f61de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9510f94b39f61de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "925676828058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dy-private-subnet-2"
            },
            "tags_all": {
              "Name": "dy-private-subnet-2"
            },
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dy_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:subnet/subnet-0b4c5409810c7cf64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4c5409810c7cf64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925676828058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dy-public-subnet-1"
            },
            "tags_all": {
              "Name": "dy-public-subnet-1"
            },
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:subnet/subnet-04e12594fe8e6e959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e12594fe8e6e959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "925676828058",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dy-public-subnet-2"
            },
            "tags_all": {
              "Name": "dy-public-subnet-2"
            },
            "vpc_id": "vpc-033229ada0cc45296"
          },
          "dependencies": [
            "module.network.aws_vpc.dy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:925676828058:vpc/vpc-033229ada0cc45296",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00321e39d6101b551",
            "default_route_table_id": "rtb-06787b621892c076f",
            "default_security_group_id": "sg-0d4047b7d314130a5",
            "dhcp_options_id": "dopt-0754d1fe2d96784e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-033229ada0cc45296",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06787b621892c076f",
            "owner_id": "925676828058",
            "tags": {
              "Name": "dy-vpc"
            },
            "tags_all": {
              "Name": "dy-vpc"
            }
          }
        }
      ]
    }
  ]
}